# raytracing.cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
data/config/: camera.params.json  world.config.json
data/shaders/triangle/: tri.frag  tri.vert
include/: short_alloc.hpp
include/glad/: glad.h
src/: camera.parameters.hpp  color.hpp  error.cc  error.hpp  glad.cc  interval.hpp  logging.hpp  main.cc  memory.arena.hpp  misc.things.hpp  platform.window.cc  platform.window.hpp  random.number.gen.hpp  ray.hpp  ray.tracer.core.cc  ray.tracer.core.hpp  ray.tracer.image.display.cc  ray.tracer.image.display.hpp  ray.tracer.material.defs.cc  ray.tracer.material.defs.hpp  ray.tracer.material.handle.hpp  ray.tracer.math.hpp  ray.tracer.object.defs.cc  ray.tracer.object.defs.hpp  renderer.common.cc  renderer.common.hpp  renderer.misc.hpp  ui.backend.nuklear.cc  ui.backend.nuklear.hpp
